separated jvmci related jars into the .jvmci folder and renamed jars folder to .lib. Changed to support debug also in regular (not GraalVM)  Java SDKs.